feat: permanently delete & empty trash
